--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-mathjax": "^1.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
