--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "react-scripts": "2.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "yarn build"
+},
   "eslintConfig": {
     "extends": "react-app"
   },
