--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-mathjax": "^1.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "serve": "^10.0.2"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -18,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "heroku-postbuild": "yarn build"
-},
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
